--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,4 +3,5 @@ display_name: 智能分段输出
 desc: 智能消息分段插件 - 支持按字数均分/按标点分段/LLM智能分段，边界标点清理(保留句内标点)
 version: v1.0.0
 author: 辉宝
-repo: ""
+
+repo: https://github.com/YumenoSayuri/astrbot_plugin_nova_splitter
